[gd_scene load_steps=8 format=3 uid="uid://bgvxjymnwpuqu"]

[ext_resource type="Script" uid="uid://buxrvc1tpvp24" path="res://UI/Shop/ShopItem.gd" id="1_170hd"]
[ext_resource type="Texture2D" uid="uid://8sok5cbs644r" path="res://Player/Ships/Default/assets/DefultShipIcon.webp" id="2_qtpk1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtpk1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtpk1"]
bg_color = Color(0.75, 0.568125, 0.0225, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vs71p"]
bg_color = Color(0.92, 0.69, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1el5"]
bg_color = Color(1, 0.8175, 0.27, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pu18"]
bg_color = Color(1, 0.756863, 0.027451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ShopItem" type="Panel"]
custom_minimum_size = Vector2(450, 450)
offset_left = -225.0
offset_top = -225.0
offset_right = 225.0
offset_bottom = 225.0
size_flags_stretch_ratio = 9.54
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_qtpk1")
script = ExtResource("1_170hd")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.0
offset_right = 169.0
offset_bottom = 338.0
grow_horizontal = 2
texture = ExtResource("2_qtpk1")
expand_mode = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 330.0
offset_right = 125.0
offset_bottom = 394.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 11
theme_override_font_sizes/font_size = 50
text = "name"
horizontal_alignment = 1

[node name="ActionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 414.0
offset_right = 120.0
offset_bottom = 479.0
grow_horizontal = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_outline_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 48
theme_override_styles/disabled = SubResource("StyleBoxFlat_qtpk1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vs71p")
theme_override_styles/hover = SubResource("StyleBoxFlat_q1el5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vs71p")
theme_override_styles/normal = SubResource("StyleBoxFlat_3pu18")
text = "button"

[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
